# wx_ros_class_ws-assemble-Ros1-

./: readme.md
devel/: .catkin  .rosinstall
devel/include/my_package_pkg/: TutorialsConfig.h
devel/include/upros_message/: ArmPosition.h  ArmPositionRequest.h  ArmPositionResponse.h  CoreMoveAction.h  CoreMoveActionFeedback.h  CoreMoveActionGoal.h  CoreMoveActionResult.h  CoreMoveFeedback.h  CoreMoveGoal.h  CoreMoveResult.h  MultipleServo.h  MyActionAction.h  MyActionActionFeedback.h  MyActionActionGoal.h  MyActionActionResult.h  MyActionFeedback.h  MyActionGoal.h  MyActionResult.h  MyMessage.h  MyServiceMsg.h  MyServiceMsgRequest.h  MyServiceMsgResponse.h  SingleServo.h  TutorialsConfig.h
devel/lib/my_package_pkg/: dynamic_reconfigure_node  move_forward  odom_move  ros_bump_node  ros_dynamic_speed_node  ros_imu_node  ros_log  ros_param  ros_publisher_node  ros_sonic_node  ros_subscriber_node  tag_grab_node
devel/lib/pkgconfig/: my_package_pkg.pc  upros_message.pc  wx_robot_description.pc
devel/share/my_package_pkg/cmake/: my_package_pkgConfig.cmake
devel/share/my_package_pkg/docs/: TutorialsConfig-usage.dox
devel/share/upros_message/cmake/: upros_message-msg-extras.cmake  upros_message-msg-paths.cmake  upros_messageConfig.cmake
devel/share/upros_message/docs/: TutorialsConfig-usage.dox
devel/share/upros_message/msg/: CoreMoveAction.msg  CoreMoveActionFeedback.msg  CoreMoveActionGoal.msg  CoreMoveActionResult.msg  CoreMoveFeedback.msg  CoreMoveGoal.msg  CoreMoveResult.msg  MyActionFeedback.msg  MyActionGoal.msg
devel/share/wx_robot_description/cmake/: wx_robot_descriptionConfig.cmake
src/: moonshot_api_key.txt
src/my_package_pkg/: CMakeLists.txt  package.xml
src/my_package_pkg/cfg/: Tutorials.cfg
src/my_package_pkg/launch/: parameter.launch
src/my_package_pkg/scripts/: apriltag_follow.py  follow_line.py  gesture_movement.py  llm_chat.py  tokenizer.py  upros_gesture.py  voice_control.py  voice_nav_node.py
src/my_package_pkg/src/: dynamic_reconfigure.cpp  move_forward.cpp  movebase_client.cpp  odom_move.cpp  ros_avoid.cpp  ros_bump.cpp  ros_dynamic_speed.cpp  ros_imu.cpp  ros_log.cpp  ros_param.cpp  ros_publisher.cpp  ros_scan.cpp  ros_sonic.cpp  ros_subscriber.cpp  tag_grab.cpp  voice_nav_node.cpp  wx_robot_description.code-workspace
src/upros_message/: CMakeLists.txt
src/upros_message/msg/: TagCommand.msg
src/wx_robot_description/: CMakeLists.txt  package.xml
src/wx_robot_description/config/: move_base_params.yaml
src/wx_robot_description/config/costmap/: costmap_common_params.yaml  (+2 more)
src/wx_robot_description/launch/: display.launch  display_xacro.launch  gazebo.launch  gazebo_model.launch  gmapping.launch  navigation.launch  save_map.launch  w2a_arm.launch
src/wx_robot_description/rviz/: show.rviz
src/wx_robot_description/urdf/: mobile_base.xacro  simple_robot.urdf
src/wx_robot_description/worlds/: cafe.world  car.world  distribution_center.world  distribution_center_2.world  distribution_center_3.world  factory.world  farm.world  inventory.world  lawn.world  neighborhood.world  office.world
(+116 files in other folders)
